# cpm

./: .gitignore  main.py  pyproject.toml  requirements.txt
cpm/: __init__.py  __main__.py  cli.py
src/cpm/: __init__.py  cli.py
src/cpm/commands/: build.py  new.py  run.py
src/cpm/templates/main/{{cookiecutter.project_name}}/: main.cpp
templates/main/: cookiecutter.json
templates/main/{{cookiecutter.project_name}}/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
tests/: test_build.py  test_new.py  test_run.py
