[project]
name = "cpm"
version = "0.1.0"
description = "C++ Project Manager"

[project.scripts]
cpm = "cpm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cpm"]

[tool.setuptools.package-data]
cpm = ["templates/**/*"]

[tool.pytest.ini_options]
addopts = "-q --tb=short"
testpaths = ["tests"]
