cmake_minimum_required(VERSION 4.1.2)

set(CK_PROJECT_NAME test)

project(${CK_PROJECT_NAME} LANGUAGES CXX)

set(BIN_DIR_NO_CONF ${PROJECT_BINARY_DIR}/bin)
set(BIN_DIR ${BIN_DIR_NO_CONF}/$<CONFIG>)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR_NO_CONF})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BIN_DIR_NO_CONF})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BIN_DIR_NO_CONF})

add_executable(${CK_PROJECT_NAME} main.cpp)

add_custom_target(run
    COMMAND ${BIN_DIR}/${CK_PROJECT_NAME}
    WORKING_DIRECTORY ${BIN_DIR}
)
